# emb_eval_toybox

./: README.md  app.py  basic_evaluation_app.py  pyproject.toml  requirements.txt
data/: synthetic_dataset_brewing.json  synthetic_dataset_coffee.json  synthetic_dataset_instruments.json  synthetic_dataset_trivia.json  synthetic_dataset_trivia_graded.json
emb_eval_toybox/: __init__.py  evaluation.py  registry.py  visualization.py
emb_eval_toybox/data/: __init__.py  dataset.py
emb_eval_toybox/providers/: __init__.py  base.py  cohere.py  fasttext.py  ollama.py  sentence_transformers.py
emb_eval_toybox/tests/: test_evaluation.py
examples/: basic_evaluation.py  ndcg_evaluation.py
pages/: dataset_viewer.py
src/data/: dataset.py
tests/: test_dataset.py
