[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emb_eval_toybox"
version = "0.1.0"
description = "Educational resource for evaluating embedding models"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=4.0.1",
    "numpy>=2.2.4",
    "streamlit>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = ["emb_eval_toybox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
